--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "peerDependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
+  },
+  "dependencies": {
+    "react-fontawesome": "^1.6.1"
   }
 }
