--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "react-dom": "^16.3.2"
   },
   "dependencies": {
-    "react-fontawesome": "^1.6.1"
+    "react-giphy-select": "^1.0.3"
   }
 }
